--- a/love-mail/package.json
+++ b/love-mail/package.json
@@ -25,13 +25,15 @@
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/schedule": "^0.4.2",
     "body-parser": "^1.19.0",
     "body-parser-xml": "^2.0.1",
     "ejs": "^3.1.6",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
