--- a/love-mail/package.json
+++ b/love-mail/package.json
@@ -29,11 +29,14 @@
     "body-parser": "^1.19.0",
     "body-parser-xml": "^2.0.1",
     "crawler": "^1.3.0",
+    "dayjs": "^1.10.6",
     "ejs": "^3.1.6",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "wechaty": "^0.62.3",
+    "write": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
