--- a/love-mail/tsconfig.json
+++ b/love-mail/tsconfig.json
@@ -10,6 +10,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "love-mail/src/*": ["./src/*"],
+      "love-mail/*": ["./*"],
+    },
     "incremental": true
   }
 }
